--- a/module1/css/style.css
+++ b/module1/css/style.css
@@ -32,7 +32,8 @@ body{
 
 /* header */
 .header{
-  background: url('../img/header-bg.svg') no-repeat  800px 330px; 
+  /* TODO: такие картинки лучше делать png */
+  background: url('../img/header-bg.svg') no-repeat  800px 330px;
   padding-bottom: 100px;
   margin-bottom: 99px;
 }
@@ -58,6 +59,9 @@ body{
 }
 .menu__link--active{
   font-weight: 800;
+  /* TODO: круто, что используешь возможности css, но тогда нужно везде использовать одинаковый подход
+   если переменные, то везде переменные. В коде важна последовательность, иначе выходит каша
+   это касается свойств с цветами*/
   color: var(--text-color);
 }
 .header-bottom{
@@ -188,7 +192,7 @@ body{
   content: '';
   display: inline-block;
   background: url('../img/arrow.svg') center no-repeat;
-  background-size: contain; 
+  background-size: contain;
   width: 20px;
   height: 14px;
   margin-left: 20px;
@@ -326,6 +330,7 @@ body{
   font-weight: 500;
   font-size: 16px;
   line-height: 180%;
+  /* TODO: Лучше выносить такие свойства в глобальные стили. Идеальный же вариант - специальные классы типографики */
   letter-spacing: 0.01em;
   color: var(--text-color);
   margin-bottom: 10px;
@@ -366,7 +371,7 @@ body{
   align-items: center;
 }
 .social-media__link{
-  display: flex;  
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 50px;
@@ -376,7 +381,7 @@ body{
   border-radius: 50px;
   margin-right: 15px;
 }
-.social-media__link > img{ 
+.social-media__link > img{
   display: block;
   width: auto;
   height: auto;
